--- a/custom_addons/energy_marketplace/views/navbar_cleanup.xml
+++ b/custom_addons/energy_marketplace/views/navbar_cleanup.xml
@@ -1,4 +1,4 @@
-<odoo>
+<!-- <odoo>
     <template id="custom_nav_cleanup" inherit_id="website.layout">
         <!-- 🧹 Remove 'Shop' -->
         <xpath expr="//a[span[text()='Shop']]" position="replace"/>
@@ -9,4 +9,4 @@
         <!-- 🧹 Remove 'Contact us' -->
         <xpath expr="//a[span[text()='Contact us']]" position="replace"/>
     </template>
-</odoo>
+</odoo> -->
